# pulsar-four-beam-model

./: .gitignore  ACKNOWLEDGMENTS.md  CITATION.cff  DATA_PROVENANCE.md  LICENSE  README.md  pyproject.toml
configs/: vela_v1_97.json
docs/: notation_mapping.md
scripts/: evaluate_solution.py  fit_minuit.py  plot_best_fit.py  plot_psi_epsilon.py
src/pulsar_four_beam_model/: __init__.py  config.py  data.py  derived.py  fit.py  likelihood.py  model.py  plotting.py
tests/: test_model_smoke.py
